# FamilyTreeApp

./: .gitignore  Makefile  pyproject.toml
backend/: main.py
frontend/: package-lock.json
frontend/src/: App.vue
