[tool.poetry]
name = "familytreeapp"
version = "0.1.0"
description = ""
authors = ["arturgorski14 <arturgorski14@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
fastapi = "^0.115.6"
uvicorn = "^0.34.0"


[tool.poetry.group.dev.dependencies]
fastapi-cli = "^0.0.7"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
